# ArtificialIntelligence

./: .gitignore  Agents.md  Artificial Intelligence.md  README.md
Evolutionary/: README.md
Evolutionary/Genetic/: README.md
Language/: Datasets.md  README.md
Language/Encoding/: Python.ipynb  README.md
Language/I18n/: OS.md  README.md
Language/Input/: README.md
Language/Languages/: README.md
Language/Lexicography/: Dictionaries.md  README.md
Language/Lexicology/: README.md
Language/Models/: Censorship.md  List.md  List.typ  README.md  Services.md
Language/Regularization/: Data Augmentation.md
Language/Romanization/: README.md
Language/Search/: README.md
Language/Segmentation/: Chunking.md  README.md  Stop Words.md  Tokenization.md  Word.md
Language/Semantics/Embedding/benches/: README.md  bench.ipynb  data-rs.ipynb  data.py  hello.py  pyproject.toml
Language/Semantics/Embedding/benches/fastembed-bench/: .gitignore  Cargo.toml
Language/Semantics/Embedding/benches/fastembed-bench/benches/: bench.rs
Language/Semantics/Embedding/benches/fastembed-bench/src/: main.rs
Language/Topic/: LDA.md  README.md
Language/Translation/: Evaluation.md  README.md  Tools.md
Learning/Meta/: README.md
Learning/Neural/: Activation Functions.md  README.md  Services.md
Learning/Reinforcement/: Driving.md  README.md
Machine Learning/: Activation Functions.ipynb  README.md  Softmax Function.md
Machine Learning/Neural Networks/: README.md  (+5 more)
NLP/: Chatbots.md  README.md  Text Encoding.md  Text Search.md
Symbolic/: Knowledge-based Agents.md  README.md
(+84 files in other folders)
