[project]
name = "benches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "model2vec>=0.2.4",
    "sentence-transformers[onnx]>=3.2.0",
    "torch>=2.4.1",
    "transformers>=4.45.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
